# servelite

./: .gitignore  CHANGELOG.md  README.md  blog-post.md  package-lock.json  package.json
.github/workflows/: coverage.yml  quality.yml  release.yml  test.yml  version.yml
examples/basic-website/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: index.html  main.rs
ui/: index.html
