[package]
name = "servelite"
version = "1.0.4"
description = "A lightweight system tray development server"
authors = ["Codeium"]
license = "MIT"
repository = "https://github.com/Codeium/servelite"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "notification-all", 
    "dialog-all", 
    "fs-all", 
    "shell-open", 
    "path-all", 
    "system-tray", 
    "clipboard-write-text",
    "updater"
]}
tokio = { version = "1.28.2", features = ["full"] }
warp = { version = "0.3.5", features = ["websocket"] }
notify = "6.1.1"
futures-util = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
